# AirScout-Analytics

./: .env.example  .gitignore  README.md  Software_analyse_ergebnis_1.txt  agent.md  claude.md  copilot_instruction.md  coursroles.md  import_analyse_ergebnis.txt  luftkarte_neustadt_interaktiv.html  pyproject.toml  requirements.txt
data/fertig/: LIBRARY_ANALYSE_FEATURE.md  OPTIMIERUNGEN_projekt_analyse.md  projekt_analyse_optimiert.py  präsentation_inhalt.txt
data/powerpoint/: 2025_07_19_06_05_Zeitslider_MQ135.html  2025_07_19_06_05_Zeitslider_Temperature_DHT_C.html  Powerpointscript.vba  airscout_one.html  umweltbericht.txt
data/powerpoint sicherheit/: 2025_07_21_04_50_Zeitslider_GPS_Sats.html  AirScout_Neustadt_W_2025.pptm  sensor_top10_map_2025_07_16_15_15.html  sensor_top10_map_2025_07_18_13_03.html
data/roh/: GPS2Street_fertig.csv  airscout_full-spectrum_neustadt_weinstrasse_2025_07121729_Home_gestank.csv  airscout_full-spectrum_neustadt_weinstrasse_2025_07122258_Home.csv  airscout_full-spectrum_neustadt_weinstrasse_2025_07151101.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07151654_Hortenkopg_Eichen_1900-1907 Motoradfahrer.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07151724.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07161545- regen -tiefgarage.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07171504.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07171534.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07181303.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07190605.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07191353.CSV  airscout_full-spectrum_neustadt_weinstrasse_2025_07191423.CSV  (+14 more)
datenbank/: GPS2Street.csv  GPS2Street_mit_Strasse.csv
docs/: Auswertungen.txt  EMA_Analyse_Dokumentation.txt  Eichfahrt_Anleitung.txt  Infos.txt
notebooks/: analysis.ipynb  correction_factors_by_file.csv  normalized_sensor_data.csv
powerpoint/: 2025_07_21_04_50_radioaktiv.html  Powerpointscript.docx  Powerpointscript.txt  Strucktur.md  airscout_one.html  info_txt_2025_07_12_17_29.txt
tests/: INFOs_zu _Tests.md  test_00_main.py
(+92 files in other folders)
